PilaGrammarParser.js
// Generated from PilaGrammar.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import PilaGrammarListener from './PilaGrammarListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class PilaGrammarParser extends antlr4.Parser {

    static grammarFileName = "PilaGrammar.g4";
    static literalNames = [ null, "'pila'", "'{'", "'}'", "'crear'", "'('", 
                            "')'", "'!'", "'empujar'", "'sacar'", "'mirar'", 
                            "'['", "','", "']'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, "NOMBRE", 
                             "NUMERO", "TEXTO", "WS", "COMMENT" ];
    static ruleNames = [ "programa", "comandos", "operacion", "crear", "push", 
                         "pop", "peek", "valor", "lista" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = PilaGrammarParser.ruleNames;
        this.literalNames = PilaGrammarParser.literalNames;
        this.symbolicNames = PilaGrammarParser.symbolicNames;
    }



	programa() {
	    let localctx = new ProgramaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, PilaGrammarParser.RULE_programa);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 18;
	        this.match(PilaGrammarParser.T__0);
	        this.state = 19;
	        this.match(PilaGrammarParser.NOMBRE);
	        this.state = 20;
	        this.match(PilaGrammarParser.T__1);
	        this.state = 21;
	        this.comandos();
	        this.state = 22;
	        this.match(PilaGrammarParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comandos() {
	    let localctx = new ComandosContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, PilaGrammarParser.RULE_comandos);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 27;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1808) !== 0)) {
	            this.state = 24;
	            this.operacion();
	            this.state = 29;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	operacion() {
	    let localctx = new OperacionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, PilaGrammarParser.RULE_operacion);
	    try {
	        this.state = 34;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 8:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 30;
	            this.push();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 31;
	            this.pop();
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 32;
	            this.peek();
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 33;
	            this.crear();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	crear() {
	    let localctx = new CrearContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, PilaGrammarParser.RULE_crear);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 36;
	        this.match(PilaGrammarParser.T__3);
	        this.state = 37;
	        this.match(PilaGrammarParser.T__4);
	        this.state = 38;
	        this.lista();
	        this.state = 39;
	        this.match(PilaGrammarParser.T__5);
	        this.state = 40;
	        this.match(PilaGrammarParser.T__6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	push() {
	    let localctx = new PushContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, PilaGrammarParser.RULE_push);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 42;
	        this.match(PilaGrammarParser.T__7);
	        this.state = 43;
	        this.match(PilaGrammarParser.T__4);
	        this.state = 44;
	        this.valor();
	        this.state = 45;
	        this.match(PilaGrammarParser.T__5);
	        this.state = 46;
	        this.match(PilaGrammarParser.T__6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pop() {
	    let localctx = new PopContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, PilaGrammarParser.RULE_pop);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 48;
	        this.match(PilaGrammarParser.T__8);
	        this.state = 49;
	        this.match(PilaGrammarParser.T__4);
	        this.state = 50;
	        this.match(PilaGrammarParser.T__5);
	        this.state = 51;
	        this.match(PilaGrammarParser.T__6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	peek() {
	    let localctx = new PeekContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, PilaGrammarParser.RULE_peek);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 53;
	        this.match(PilaGrammarParser.T__9);
	        this.state = 54;
	        this.match(PilaGrammarParser.T__4);
	        this.state = 55;
	        this.match(PilaGrammarParser.T__5);
	        this.state = 56;
	        this.match(PilaGrammarParser.T__6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	valor() {
	    let localctx = new ValorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, PilaGrammarParser.RULE_valor);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 58;
	        _la = this._input.LA(1);
	        if(!(_la===15 || _la===16)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lista() {
	    let localctx = new ListaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, PilaGrammarParser.RULE_lista);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 60;
	        this.match(PilaGrammarParser.T__10);
	        this.state = 69;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===15 || _la===16) {
	            this.state = 61;
	            this.valor();
	            this.state = 66;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===12) {
	                this.state = 62;
	                this.match(PilaGrammarParser.T__11);
	                this.state = 63;
	                this.valor();
	                this.state = 68;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 71;
	        this.match(PilaGrammarParser.T__12);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

PilaGrammarParser.EOF = antlr4.Token.EOF;
PilaGrammarParser.T__0 = 1;
PilaGrammarParser.T__1 = 2;
PilaGrammarParser.T__2 = 3;
PilaGrammarParser.T__3 = 4;
PilaGrammarParser.T__4 = 5;
PilaGrammarParser.T__5 = 6;
PilaGrammarParser.T__6 = 7;
PilaGrammarParser.T__7 = 8;
PilaGrammarParser.T__8 = 9;
PilaGrammarParser.T__9 = 10;
PilaGrammarParser.T__10 = 11;
PilaGrammarParser.T__11 = 12;
PilaGrammarParser.T__12 = 13;
PilaGrammarParser.NOMBRE = 14;
PilaGrammarParser.NUMERO = 15;
PilaGrammarParser.TEXTO = 16;
PilaGrammarParser.WS = 17;
PilaGrammarParser.COMMENT = 18;

PilaGrammarParser.RULE_programa = 0;
PilaGrammarParser.RULE_comandos = 1;
PilaGrammarParser.RULE_operacion = 2;
PilaGrammarParser.RULE_crear = 3;
PilaGrammarParser.RULE_push = 4;
PilaGrammarParser.RULE_pop = 5;
PilaGrammarParser.RULE_peek = 6;
PilaGrammarParser.RULE_valor = 7;
PilaGrammarParser.RULE_lista = 8;

class ProgramaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PilaGrammarParser.RULE_programa;
    }

	NOMBRE() {
	    return this.getToken(PilaGrammarParser.NOMBRE, 0);
	};

	comandos() {
	    return this.getTypedRuleContext(ComandosContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.enterPrograma(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.exitPrograma(this);
		}
	}


}



class ComandosContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PilaGrammarParser.RULE_comandos;
    }

	operacion = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(OperacionContext);
	    } else {
	        return this.getTypedRuleContext(OperacionContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.enterComandos(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.exitComandos(this);
		}
	}


}



class OperacionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PilaGrammarParser.RULE_operacion;
    }

	push() {
	    return this.getTypedRuleContext(PushContext,0);
	};

	pop() {
	    return this.getTypedRuleContext(PopContext,0);
	};

	peek() {
	    return this.getTypedRuleContext(PeekContext,0);
	};

	crear() {
	    return this.getTypedRuleContext(CrearContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.enterOperacion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.exitOperacion(this);
		}
	}


}



class CrearContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PilaGrammarParser.RULE_crear;
    }

	lista() {
	    return this.getTypedRuleContext(ListaContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.enterCrear(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.exitCrear(this);
		}
	}


}



class PushContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PilaGrammarParser.RULE_push;
    }

	valor() {
	    return this.getTypedRuleContext(ValorContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.enterPush(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.exitPush(this);
		}
	}


}



class PopContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PilaGrammarParser.RULE_pop;
    }


	enterRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.enterPop(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.exitPop(this);
		}
	}


}



class PeekContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PilaGrammarParser.RULE_peek;
    }


	enterRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.enterPeek(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.exitPeek(this);
		}
	}


}



class ValorContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PilaGrammarParser.RULE_valor;
    }

	NUMERO() {
	    return this.getToken(PilaGrammarParser.NUMERO, 0);
	};

	TEXTO() {
	    return this.getToken(PilaGrammarParser.TEXTO, 0);
	};

	enterRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.enterValor(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.exitValor(this);
		}
	}


}



class ListaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PilaGrammarParser.RULE_lista;
    }

	valor = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ValorContext);
	    } else {
	        return this.getTypedRuleContext(ValorContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.enterLista(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PilaGrammarListener ) {
	        listener.exitLista(this);
		}
	}


}




PilaGrammarParser.ProgramaContext = ProgramaContext; 
PilaGrammarParser.ComandosContext = ComandosContext; 
PilaGrammarParser.OperacionContext = OperacionContext; 
PilaGrammarParser.CrearContext = CrearContext; 
PilaGrammarParser.PushContext = PushContext; 
PilaGrammarParser.PopContext = PopContext; 
PilaGrammarParser.PeekContext = PeekContext; 
PilaGrammarParser.ValorContext = ValorContext; 
PilaGrammarParser.ListaContext = ListaContext; 
